# afib-detection-rr-intervals

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
app/: README.md  streamlit_app.py  utils.py
app/pages/: 1_🔬_Patient_Inspector.py  2_⚔️_Model_Showdown.py  3_📦_Compression_Lab.py  4_🌍_Cross_Dataset.py  5_🧪_What_If.py
configs/: data.yaml  model_cnn_lstm.yaml  train.yaml
docs/: cleanup_candidates.md  figures_audit.md
docs/datasets/: README.md  afdb.md  ltafdb.md  nsrdb.md
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_ablation.ipynb  04_phase35_w60.ipynb  05_phase4_compression.ipynb  06_phase5_cross_dataset.ipynb
report/: README.md  main.tex
report/backmatter/: annexes.tex
report/bibliography/: references.bib
report/chapters/: 01_introduction.tex  02_etat_art.tex  03_methodes.tex  04_resultats.tex  05_discussion.tex  06_conclusion.tex
report/frontmatter/: acronymes.tex  dedicace.tex  pagedegarde.tex  remerciements.tex  resume.tex
report/preamble/: commands.tex  packages.tex  style.tex
reports/: 01_note_bibliographique.md  baselines_summary.csv  baselines_summary.json  best_cnn_lstm_params.json  optuna_study.csv  phase35_best_params.json  phase35_comparison.csv  phase35_optuna_study.csv  phase35_results.json  phase3_comparison.csv  phase3_results.json  phase4_compression.csv  phase4_oof_scores.npz  phase4_results.json  phase4b_compression.csv  phase4b_oof_scores.npz  phase4b_results.json  phase5_cross_dataset.csv  phase5_results.json
scripts/: build_windows.py  download_data.py  phase4_compression.py  phase5_cross_dataset.py  png_to_pdf.py
src/: __init__.py  evaluate.py  train.py
src/baselines/: __init__.py  cv.py
src/data/: loader.py  (+2 more)
tests/: test_patient_split.py  test_rr_extract.py
(+7 files in other folders)
