[project]
name = "afib-cnn-lstm"
version = "0.1.0"
description = "Hybrid CNN-LSTM for atrial fibrillation detection from RR-interval series, optimized for CPU/edge deployment."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Cheikh Rouhou Ashedi", email = "ashedi.cheikhrouhou@gmail.com" }
]
keywords = ["atrial-fibrillation", "ecg", "rr-intervals", "deep-learning", "cnn-lstm", "physionet"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "wfdb>=4.1",
    "optuna>=3.5",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "onnx>=1.15",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
demo = [
    "streamlit>=1.32",
    "plotly>=5.20",
]
xgb = [
    "xgboost>=2.0",
]

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
